@@ -1,9 +1,11 @@
 version 0.99.2 - XX-MMM-2010
  . [NEW] Actions: Added block actions via PLBlocks: CCCallBlock and CCCallBlockN (issue #699)
+ . [NEW] Actions: Added CCFollow, and actions that follows a CCNode (issue #738)
  . [NEW] MenuItem: MenuItems supports blocks via PLBlocks (issue #699)
  . [NEW] Texture2D: added support for NPOT textures where available (issue #818)
  . [NEW] Templates: file templates for CCLayer, CCNode, CCSprite (issue #XXX)
  . [NEW] ProfilingTimer: new class to test performance (issue #XXX)
+ . [FIX] Box2d: GLES-DebugDraw draws non-solid circles as non-solid circles (issue #831)
  . [FIX] EAGLView: swapBuffers doesn't bind the color buffer. It assumes it is already bound (issue #XXX)
  . [FIX] Protocols: CCAnimationProtocol removed. Merged into CCAnimation (issue #XXX)
  . [FIX] Protocols: CCFrameProtocol removed. Merged into CCSprite (issue #XXX)
